k3s/traefik-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api-prefix
  namespace: sp
spec:
  stripPrefix:
    prefixes:
      - /api

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-gitmeter-prefix
  namespace: sp
spec:
  stripPrefix:
    prefixes:
      - /gitmeter

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab-sheets-sync-routes
  namespace: sp
spec:
  entryPoints:
    - websecure
  tls:
    secretName: hms-ssl-certs
  routes:
    - kind: Rule
      match: Host(`sprout-da.hsenidmobile.com`) && PathPrefix(`/api`)
      services:
        - name: gitlab-sheets-sync-service
          port: 5001
    - kind: Rule
      match: Host(`sprout-da.hsenidmobile.com`) && PathPrefix(`/gitmeter`)
      services:
        - name: gitlab-sheets-sync-service
          port: 8000
      middlewares:
        - name: strip-gitmeter-prefix
